# blogsss

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  main.css  main.js  mkdocs.yml  pyproject.toml  search.html
about/: index.html
blogs/data_science/typing/: index.html
blogs/geospatial/stop-qgis-xml-raster/stop-qgis-xml-raster/: index.html
blogs/pm25/cb_2017_us_county_500k/: readme.txt
blogs/remote_sensing/satelliate_for_wildfire/: index.html
blogs/stop-qgis-xml-raster/stop-qgis-xml-raster/: index.html
blogs/typing/: index.html
docs/: about.md  index.md
docs/blogs/: typing.md
docs/blogs/pm25/: plot_pm25_usa_by_county.ipynb
docs/blogs/pm25/cb_2017_us_county_500k/: cb_2017_us_county_500k.dbf
search/: search_index.json
site/: 404.html
site/search/: search_index.json
