[project]
name = "blogsss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
]
